--- a/index.html
+++ b/index.html
@@ -1,170 +1,184 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href='https://fonts.googleapis.com/css?family=Nunito' rel='stylesheet'>
-    <link rel="stylesheet" href="sitestyles.css">
-    <title>SaplingsSite</title>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
+   <link href='https://fonts.googleapis.com/css?family=Nunito' rel='stylesheet'>
+   <link rel="stylesheet" href="/saplingsSite/sitestyles.css">
+   <title>SaplingsSite</title>
 </head>
 <header>
-    <div class="flexnavbar">
-    <div class="navbar">
-        <div class="leftnav">
-     <div class="home color">
-        <p>HOME</p>
-     </div>
-     <div class="services color">
-        <p>SERVICES</p>
-     </div>
-     <div class="aboutus color">
-        <p>ABOUT US</p>
-     </div>
-    </div>
-     <div class="logo">
-
-     </div>
-     <div class="rightnav">
-        <div class="instalogo border">
-            <i class="fa-brands fa-instagram instasize"></i>
+   <div class="flexnavbar">
+      <div class="navbar">
+         <div class="leftnav">
+            <div class="home color">
+               <p>HOME</p>
+            </div>
+            <div class="services color">
+               <p><a id="services-navigation" href="#footer-on-click">SERVICES</a></p>
+            </div>
+            <div class="aboutus color">
+               <p>ABOUT US</p>
+            </div>
          </div>
-         <div class="ytlogo border">
-            <i class="fa-brands fa-youtube"></i>  
-            </div>   
-        <div class="contact backgroundcolor"><p><span>CONTACT</span></p></div>
-     </div>
-    </div>
-    </div>
+         <div class="logo">
+
+         </div>
+         <div class="rightnav">
+            <div class="instalogo border">
+               <i class="fa-brands fa-instagram instasize"></i>
+            </div>
+            <div class="ytlogo border">
+               <i class="fa-brands fa-youtube"></i>
+            </div>
+            <div class="contact backgroundcolor">
+               <p><span>CONTACT</span></p>
+            </div>
+         </div>
+      </div>
+   </div>
 </header>
+
 <body>
    <!-- Hero-Section -->
- <div class="hero-section">
-   <div class="outer">
-      <div class="inner">
-         <div class="inner-buttons">
-          <div class="contact-us">
-          <p>Contact-Us</p>
-          </div>
-          <div class="know-more">
-            <p>Know More</p>
-            <div class="knowmore-arrow">
-            <i class="fa-solid fa-right-long"></i>
-         </div>          
-         </div>
-         </div>
-         <div class="innercontent">
-         <p class="main-heading">Bring Nature Indoors</p>
-         <p class="main-content">We create a green haven at home with our personalized plant setups. Tailored designs for a refreshing cozy loving space.</p>
-         </div>
-         <div class="innerimg">
+   <div class="hero-section">
+      <div class="outer">
+         <div class="inner">
+            <div class="inner-buttons">
+               <div class="contact-us">
+                  <p>Contact-Us</p>
+               </div>
+               <a id="footer-on-click" href="#footer-logo"><div class="know-more">
+                  <p>Know More</p>
+                  <div class="knowmore-arrow">
+                     <i class="fa-solid fa-right-long"></i>
+                  </div>
+               </div></a> 
+            </div>
+            <div class="innercontent">
+               <p class="main-heading">Bring Nature Indoors</p>
+               <p class="main-content">We create a green haven at home with our personalized plant setups. Tailored
+                  designs for a refreshing cozy loving space.</p>
+            </div>
+            <div class="innerimg">
+            </div>
          </div>
       </div>
    </div>
-</div>
-<!-- Service-Section -->
-<div class="background-leaf-pattern">
-   <div class="img1">
+   <!-- Service-Section -->
+   <div class="background-leaf-pattern">
+      <div class="img1">
+      </div>
+      <div class="img2">
+      </div>
    </div>
-   <div class="img2">
+   <div class="service-section">
+      <div id="serv-head">
+         <h1>Searching For...??</h1>
+      </div>
+      <div id="blank1">
+      </div>
+      <div id="blank2">
+      </div>
+      <div id="serv1" class="serv">
+         <span class="service-text">Plant Maintainance</span>
+      </div>
+      <div id="serv2" class="serv ">
+         <span class="service-text">Corporate Plants Setup</span>
+      </div>
+      <div id="serv3" class="serv">
+         <span class="service-text">Vertical Gardening Setup</span>
+      </div>
+      <div id="serv4" class="serv">
+         <span class="service-text">Home Plant Setup</span>
+      </div>
+      <div id="serv5" class="serv">
+         <span class="service-text">Gardening Tools</span>
+      </div>
    </div>
- </div>
- <div class="service-section">
-   <div id="serv-head">
-      <h1>Searching For...??</h1>
-   </div>
-   <div id="blank1">
-   </div>
-   <div id="blank2">
-   </div>
-  <div id="serv1" class="serv">
-   <span class="service-text">Plant Maintainance</span>
-  </div>
-  <div id="serv2" class="serv ">
-   <span class="service-text">Corporate Plants Setup</span>
-  </div>
-  <div id="serv3" class="serv">
-   <span class="service-text">Vertical Gardening Setup</span>
-  </div>
-  <div id="serv4" class="serv">
-   <span class="service-text">Home Plant Setup</span>
-  </div>
-  <div id="serv5" class="serv">
-   <span class="service-text">Gardening Tools</span> 
-  </div>
- </div>
- <!-- What sets us apart?-Section -->
+   <!-- What sets us apart?-Section -->
    <div class="main-3-outer">
-  <h1 id="main-3-heading">What Sets Us Apart ?</h1>
-   <hr id="hr-left">
-   <hr id="hr-right">
-   <div class="main-row1">
-   <div class="top-div col1 inners i11">
-      <span class="inner-text">Consumer Satisfaction</span>
-   </div>
-   <div class="bottomm-div col1 inners i21">
-      <span class="inner-text">Resonable Prices</span>
-   </div>
-   </div>
-   <div class="main-row2">
-      <div class="top-div col2 inners i12">
-         <span class="inner-text">Quick Service</span>
+      <h1 id="main-3-heading">What Sets Us Apart ?</h1>
+      <hr id="hr-left">
+      <hr id="hr-right">
+      <div class="main-row1">
+         <div class="top-div col1 inners i11">
+            <span class="inner-text">Consumer Satisfaction</span>
+         </div>
+         <div class="bottomm-div col1 inners i21">
+            <span class="inner-text">Resonable Prices</span>
+         </div>
       </div>
-   <div class="bottom-div col2 inners i22">
-      <span class="inner-text">Quality Assurance</span>
-   </div>
-   </div>
-   </div>
-<!--About Me...? -->
-<div class="main-4">
-   <div class="main-4-img">
-   </div>
-   <div class="main-4-content">
-      <h2 id="content-main-heading">About Me...?</h2>
-      <p id="about-me-content">I am a third-year BTech student at Guru Gobind Singh Indraprastha University, deeply passionate about coding and the tech industry. Presently, I am actively engaged in web development projects and keen on further enhancing my skill set in this domain. I look forward to delving into more advanced skills and projects in the tech field.</p>
-   <div class="contact-me">
-      <div id="main-heading-2">
-      <h3>Follow & Connect</h3>
-      </div>
-      <div id="main-4-icons">
-      <div class="main-insta">
-        <a target="_blank" href="https://www.instagram.com/deepankar04?igsh=NnQ1ZXI3aTl2eTRz"><i class="fa-brands fa-instagram main-4-hover"></i></a>
-      </div>
-      <div class="main-linkedin">
-         <a target="_blank" href="https://www.linkedin.com/in/deepankar-aggarwal-545433255?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fa-brands fa-linkedin main-4-hover"></i></a>
-      </div>
-      <div class="main-facebook">
-         <a target="_blank" href="https://www.facebook.com/deepankar.gupta2004?mibextid=ZbWKwL"><i class="fa-brands fa-square-facebook main-4-hover"></i></a>
-      </div>
-      <div class="main-twittter">
-         <i class="fa-brands fa-square-twitter main-4-hover"></i>
-      </div>
-      <div class="main-pinterest">
-         <i class="fa-brands fa-square-pinterest main-4-hover"></i>
+      <div class="main-row2">
+         <div class="top-div col2 inners i12">
+            <span class="inner-text">Quick Service</span>
+         </div>
+         <div class="bottom-div col2 inners i22">
+            <span class="inner-text">Quality Assurance</span>
+         </div>
       </div>
    </div>
+   <!--About Me...? -->
+   <div class="main-4">
+      <div class="main-4-img">
+      </div>
+      <div class="main-4-content">
+         <h2 id="content-main-heading">About Me...?</h2>
+         <p id="about-me-content">I am a third-year BTech student at Guru Gobind Singh Indraprastha University, deeply
+            passionate about coding and the tech industry. Presently, I am actively engaged in web development projects
+            and keen on further enhancing my skill set in this domain. I look forward to delving into more advanced
+            skills and projects in the tech field.</p>
+         <div class="contact-me">
+            <div id="main-heading-2">
+               <h3>Follow & Connect</h3>
+            </div>
+            <div id="main-4-icons">
+               <div class="main-insta">
+                  <a target="_blank" href="https://www.instagram.com/deepankar04?igsh=NnQ1ZXI3aTl2eTRz"><i
+                        class="fa-brands fa-instagram main-4-hover"></i></a>
+               </div>
+               <div class="main-linkedin">
+                  <a target="_blank"
+                     href="https://www.linkedin.com/in/deepankar-aggarwal-545433255?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i
+                        class="fa-brands fa-linkedin main-4-hover"></i></a>
+               </div>
+               <div class="main-facebook">
+                  <a target="_blank" href="https://www.facebook.com/deepankar.gupta2004?mibextid=ZbWKwL"><i
+                        class="fa-brands fa-square-facebook main-4-hover"></i></a>
+               </div>
+               <div class="main-twittter">
+                  <i class="fa-brands fa-square-twitter main-4-hover"></i>
+               </div>
+               <div class="main-pinterest">
+                  <i class="fa-brands fa-square-pinterest main-4-hover"></i>
+               </div>
+            </div>
+         </div>
+      </div>
    </div>
-</div>
-</div>
-<!-- Suggestion Form -->
+   <!-- Suggestion Form -->
 
-<div id="suggestion-box-outer">
-   <div id="suggestion-box">
-   <h1 id="form-heading">Any Suggestion...??</h1>
-   <form id="form-content" action="xyz">
-      <h2 id="form-secondry-heading" >Name</h2>
-      <div id="form-name">
-      <input required class="name" type="text" placeholder="First Name">
-      <input required class="name" type="text" placeholder="Last Name">
+   <div id="suggestion-box-outer">
+      <div id="suggestion-box">
+         <h1 id="form-heading">Any Suggestion...??</h1>
+         <form id="form-content" action="xyz">
+            <h2 id="form-secondry-heading">Name</h2>
+            <div id="form-name">
+               <input required class="name" type="text" placeholder="First Name">
+               <input required class="name" type="text" placeholder="Last Name">
+            </div>
+            <h2 id="form-secondry-heading">Email</h2>
+            <input required id="email" type="email" placeholder="Email">
+            <h2 id="form-secondry-heading">Your Suggestion</h2>
+            <textarea id="suggestion-area" placeholder="Suggestion Here..."></textarea>
+            <button id="form-button">Submit</button>
+         </form>
       </div>
-      <h2 id="form-secondry-heading">Email</h2>
-      <input required id="email" type="email" placeholder="Email">
-      <h2 id="form-secondry-heading">Your Suggestion</h2>
-      <textarea id="suggestion-area" placeholder="Suggestion Here..."></textarea>
-      <button id="form-button">Submit</button>
-   </form>
-</div>
-</div>
+   </div>
 </body>
 <!-- Footer -->
 <footer>
@@ -173,7 +187,7 @@
       </div>
       <div id="newsletter">
          <form>
-            <h2 id="newsletter-heading" >Subscribe To Our Newsletter</h2>
+            <h2 id="newsletter-heading">Subscribe To Our Newsletter</h2>
             <input id="newsletter-input" type="email" placeholder="E-mail">
             <button id="newsletter-button">Submit</button>
          </form>
@@ -187,12 +201,17 @@
          <p class="footer-text">Terms and Conditions</p>
       </div>
       <div id="connect-us">
-         <a target="_blank" href="https://www.instagram.com/deepankar04?igsh=NnQ1ZXI3aTl2eTRz"><i class="fa-brands fa-instagram main-4-hover"></i></a>
-         <a target="_blank" href="https://www.linkedin.com/in/deepankar-aggarwal-545433255?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fa-brands fa-linkedin main-4-hover"></i></a>
-         <a target="_blank" href="https://www.facebook.com/deepankar.gupta2004?mibextid=ZbWKwL"><i class="fa-brands fa-square-facebook main-4-hover"></i></a>
+         <a target="_blank" href="https://www.instagram.com/deepankar04?igsh=NnQ1ZXI3aTl2eTRz"><i
+               class="fa-brands fa-instagram main-4-hover"></i></a>
+         <a target="_blank"
+            href="https://www.linkedin.com/in/deepankar-aggarwal-545433255?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i
+               class="fa-brands fa-linkedin main-4-hover"></i></a>
+         <a target="_blank" href="https://www.facebook.com/deepankar.gupta2004?mibextid=ZbWKwL"><i
+               class="fa-brands fa-square-facebook main-4-hover"></i></a>
       </div>
    </div>
    <hr id="footer-hr">
    <p id="rights">@2024 Rights Reserved. Website Designed and Developed by Deepankar Aggarwal.</p>
 </footer>
+
 </html>
